# welang

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Package.swift  README.md  gleam.toml
.github/workflows/: pr-tests.yml  test.yml
Sources/WeLang/: main.swift
Sources/WeLangLib/: AST.swift  Codegen.swift  Compile.swift  Errors.swift  Lexer.swift  Parser.swift
Tests/WeLangTests/: ASTTests.swift  CodegenTests.swift  CompileTests.swift  ErrorsTests.swift  LexerTests.swift  ParserTests.swift
docs/: primitives.md
prompts/: 01-lexer.md  02-parser-foundations.md  03-s-expressions-and-pipes.md  04-compound-data-types.md  05-interpolated-strings.md  06-type-annotations.md  07-type-inference.md  08-higher-order-functions.md  09-compile-time-macros.md  10-pattern-matching-and-sum-types.md  11-module-system.md  12-codegen-core.md  13-codegen-advanced-and-completion.md
src/: ast.rs  codegen.rs  errors.rs  grammar.peg  lexer.gleam  lexer.rs  main.rs  parser.gleam  parser.rs  welang.gleam
src/lisp/: codegen.rs  lexer.rs  (+3 more)
test/: parser_test.gleam  welang_test.gleam
tests/: all-types.we  arithmetic.we  booleans.we  comparisons.we  complex-map.we  complex-tuple.we  conditionals.we  cucumber_tests.rs  dot-operators.we  floats.we  generic-specialization.we  generics.we  globals.we  hello.we  heterogeneous-map.we  higher-order-functions.we  if-no-else.we  map.we  multiple-strings.we  nominal-types.we  pipe-order.we  pipe.we  primitive-bool.we  primitive-float.we  primitive-int.we  primitive-string.we  print.we  recursion.we  rename.we  string-print.we  structural-types.we
(+25 files in other folders)
