[package]
name = "we"
version = "0.1.0"
edition = "2024"

[dependencies]
logos = "0.15"
chumsky = { version = "0.9", features = [] }
cranelift-codegen = { version = "0.109", features = ["x86"] }
cranelift-frontend = "0.109"
cranelift-module = "0.109"
cranelift-object = "0.109"
polytype = "7.0.1"
target-lexicon = "0.12"
